--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,1 +1,6 @@
-<br>dashboard lol
+<%= form_for @shout do |form| %>
+  <%= form.text_field :body, placeholder: 'Shout content' %>
+  <%= form.submit 'Shout!' %>
+<% end %>
+
+<%= render @shouts %>
