Clean up shouts

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,14 +10,19 @@
 
   <div>
     <% if signed_in? %>
-      <%= current_user.username %>
+      <%= link_to current_user.username, dashboard_path %>
       <%= link_to 'Sign out', session_path, method: :delete %>
     <% else %>
       <%= link_to 'Sign in', new_session_path %>
       <%= link_to 'Sign up', new_user_path %>
     <% end %>
   </div>
-<%= yield %>
+
+  <% if alert %>
+    <p><%= alert %></p>
+  <% end %>
+
+  <%= yield %>
 
 </body>
 </html>
