--- a/app/views/shouts/_shout.html.erb
+++ b/app/views/shouts/_shout.html.erb
@@ -1,3 +1,7 @@
 <%= div_for shout do %>
+  <%= link_to shout.user.username, shout.user  %>
+  shouted
   <%= shout.body  %>
+  <%= link_to time_ago_in_words(shout.created_at), shout  %>
+  ago.
 <% end %>
