--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,26 +7,15 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-  <div>
-    <% if signed_in? %>
-      <%= link_to current_user.username, dashboard_path %>
-      <%= link_to 'Sign out', session_path, method: :delete %>
-    <% else %>
-      <%= link_to 'Sign in', new_session_path %>
-      <%= link_to 'Sign up', new_user_path %>
-    <% end %>
+  
+  <%= render 'layouts/header' %>
+  <div class="container">
+    <%= render 'layouts/flash' %>
+    <%= yield %>
+    <%= render 'layouts/footer' %>
+    <%= debug(params) if Rails.env.development? %>
   </div>
 
-  <% if alert %>
-    <p><%= alert %></p>
-  <% end %>
-
-  <% if notice %>
-    <p><%= notice %></p>
-  <% end %>
-
-  <%= yield %>
 
 </body>
 </html>
