--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,16 @@
-<% if signed_in? %>
-  <%= link_to current_user.username, dashboard_path %>
-  <%= link_to 'Sign out', session_path, method: :delete %>
-<% else %>
-  <%= link_to 'Sign in', new_session_path %>
-  <%= link_to 'Sign up', new_user_path %>
-<% end %>
+<header class="navbar navbar-fixed-top navbar-inverse">
+  <div class="container">
+    <%= link_to "shouter", root_path, id: "logo" %>
+    <nav>
+      <ul class="nav navbar-nav navbar-right">
+        <% if signed_in? %>
+          <li><%= link_to "Users", users_path %></li>
+          <li><%= link_to 'Sign out', session_path, method: :delete %></li>
+        <% else %>
+          <li><%= link_to 'Sign in', new_session_path %></li>
+          <li><%= link_to 'Sign up', new_user_path %></li>
+        <% end %>
+      </ul>
+    </nav>
+  </div>
+</header>
